--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,11 +1,14 @@
+//VARIABLES
 $blancCasse : #f1f1f1;
 $sombre : #1d1d1d;
 
+// MIXIN
 @mixin flexCentreX{
     display: flex;
     justify-content: center;
 }
 
+// POLICE
 @font-face{
     font-family: 'Santana';
     src: url('../ressources/police/Santana.ttf') format('truetype');
@@ -24,7 +27,7 @@ $sombre : #1d1d1d;
 }
 
 
-
+// reset
 
 html{
     font-size: 62.5%;
@@ -46,6 +49,8 @@ body{
     font-family: 'advent', 'arial';
     font-size: 2rem;
 }
+
+// GENERAL
 section{
     text-align: center;
     padding : 50px 0 100px;
@@ -85,6 +90,9 @@ a{
     font-weight: bold;
     font-size: 3rem;
 }
+
+
+
 
 #navigation{
     width: 100%;
@@ -127,6 +135,13 @@ header{
     height: 800px;
     text-align: center;
     background: $sombre;
+    overflow: hidden;
+    z-index: 1;
+    position: relative;
+
+    canvas{
+        display: inline-block;
+    }
 
     h1{
         color: $blancCasse;
@@ -134,21 +149,31 @@ header{
         font-size:15rem;
         letter-spacing: 5px;
         padding-top: 150px;
-        margin: 0 auto 100px auto;        
+        position: absolute;
+        top:30%;
+        left:50%;
+        transform: translate(-50%,-50%);
     }
-
+    
     h2{
         color:$blancCasse;
         font-family: 'England';
         font-size: 7rem;
-
+        position: absolute;
+        top:60%;
+        left:50%;
+        transform: translate(-50%,-50%);
     }
-
+    
     #logo{
         width: 50px;
         background: $blancCasse;
         padding: 10px;
         border-radius: 50%;
+        position: absolute;
+        bottom:5%;
+        left:50%;
+        transform: translateX(-50%);
         margin: 50px auto;
     }
 }
